# btwxt

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: btwxt-config.cmake
include/btwxt/: CMakeLists.txt  btwxt.h  btwxt.hpp  grid-axis.h  grid-axis.hpp  grid-point-data.h  regular-grid-interpolator.h  regular-grid-interpolator.hpp  utility-p.hpp
src/: CMakeLists.txt  grid-axis.cpp  regular-grid-interpolator-implementation.cpp  regular-grid-interpolator-implementation.h  regular-grid-interpolator.cpp
test/: CMakeLists.txt  btwxt-tests.cpp  grid-axis-tests.cpp  implementation-tests.cpp
test/fixtures/: implementation-fixtures.h  public-fixtures.h
