
cmake_minimum_required(VERSION 3.10)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
include(GitVersionDetect)
set(BTWXT_VERSION_MAJOR ${GITVERSIONDETECT_VERSION_MAJOR})
set(BTWXT_VERSION_MINOR ${GITVERSIONDETECT_VERSION_MINOR})
set(BTWXT_VERSION_PATCH ${GITVERSIONDETECT_VERSION_PATCH})
set(BTWXT_VERSION ${GITVERSIONDETECT_VERSION_MAJOR}.${GITVERSIONDETECT_VERSION_MINOR}.${GITVERSIONDETECT_VERSION_PATCH})
set(BTWXT_VERSION_FULL ${GITVERSIONDETECT_VERSION})


project(btwxt VERSION ${BTWXT_VERSION} LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)

find_package(spdlog CONFIG REQUIRED)


option(BTWXT_BUILD_TESTING "Build BTWXT testing targets" OFF)

add_subdirectory(src)

if (BTWXT_BUILD_TESTING)
    find_package(GTest CONFIG REQUIRED)
    enable_testing()
    add_subdirectory(test)
endif ()
